--- a/dashboard.css
+++ b/dashboard.css
@@ -20,6 +20,8 @@ body{
     background-color: #333;
     cursor:pointer;
     font-size:19px;
+    outline: none;
+    border:0px;
 }
 .button:hover{
     border: 0;
@@ -38,4 +40,45 @@ body{
     height: 100%;
     background-color: #333;
     opacity: 0.4;
+}
+
+.popup{
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    width:60%;
+    height: 60%;
+    background-color: white;
+}
+.formInputs{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content: center;
+    height: 100%;
+}
+.input{
+    margin-bottom: 10px;
+    padding: 5px;
+    width: 250px;
+    border:1px solid #333;
+}
+.textareaInput{
+    min-width: 250px;
+    border:1px solid #333;
+    width: 50%;
+    height: 200px;
+    resize: none;
+    margin: 0;
+    padding: 5px;
+
+}
+.formInputs h3{
+    margin-bottom:7px;
+    margin-top:7px;
+    color:#333;
+}
+.form{
+    height: 100%;
 }
