--- a/dashboard.css
+++ b/dashboard.css
@@ -15,13 +15,12 @@ body{
     padding: 15px;
     margin-bottom:5px;
     text-align: center;
-    width: 120px;
+    width: 150px;
     color: #eee;
     background-color: #333;
     cursor:pointer;
     font-size:19px;
-    outline: none;
-    border:0px;
+    border:1px solid transparent;
 }
 .button:hover{
     border: 0;
@@ -81,4 +80,20 @@ body{
 }
 .form{
     height: 100%;
+}
+
+
+@media screen and (max-width:550px) {
+.popup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    height: 90%;
+    background-color: white;
+}
+.container h2{
+    font-size: 19px;
+}
 }
