--- a/dashboard.css
+++ b/dashboard.css
@@ -49,6 +49,7 @@ body{
     width:60%;
     height: 60%;
     background-color: white;
+    overflow: auto;
 }
 .formInputs{
     display:flex;
@@ -81,7 +82,20 @@ body{
 .form{
     height: 100%;
 }
-
+.articleContainer {
+    padding: 6px;
+    border:1px solid #333;
+    margin-bottom: 2px;
+}
+.articleTitle{
+    color: #f56a6a;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.articleContent, .articlePhoto{
+    color: #41474c;
+    margin-bottom: 5px;
+}
 
 @media screen and (max-width:550px) {
 .popup {
@@ -92,6 +106,7 @@ body{
     width: 90%;
     height: 90%;
     background-color: white;
+    
 }
 .container h2{
     font-size: 19px;
